@@ -11,14 +11,14 @@
 /m4/ltsugar.m4
 /m4/ltversion.m4
 /m4/lt~obsolete.m4
-/perl/Makefile.PL
-/perl/Makefile.old
+/perl/Build
+/perl/Build.PL
+/perl/MYMETA.json
 /perl/MYMETA.yml
-/perl/Remctl.bs
-/perl/Remctl.c
+/perl/_build/
 /perl/blib/
+/perl/lib/Net/Remctl.c
 /perl/lib/Net/Remctl.pm
-/perl/pm_to_blib
 /perl/t/api.t
 /php/Makefile.*
 /php/acinclude.m4
