@@ -5,9 +5,9 @@
          Currently maintained by Russ Allbery <rra@stanford.edu>
 
   Copyright 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011,
-  2012 The Board of Trustees of the Leland Stanford Junior University.
-  This software is distributed under a BSD-style license.  Please see the
-  section LICENSE below for more information.
+  2012, 2013 The Board of Trustees of the Leland Stanford Junior
+  University.  This software is distributed under a BSD-style license.
+  Please see the section LICENSE below for more information.
 
 BLURB
 
@@ -72,12 +72,11 @@ REQUIREMENTS
   Windows.
 
   To build the Perl bindings for the C client library, you will need Perl
-  5.6.0 or later.  To run the full test suite for the Perl bindings, the
-  Perl modules Test::More and Test::Pod must be installed.  Test::More
-  comes with Perl 5.8 and later.  Test::Pod currently must be installed
-  separately, but the POD tests will be skipped without interfering with
-  the rest of the tests if it's not installed.  The Perl bindings have not
-  been tested on Windows.
+  5.8 or later.  To run the full test suite for the Perl bindings, the
+  Perl module Test::Pod must be installed.  Test::Pod currently must be
+  installed separately, but the POD tests will be skipped without
+  interfering with the rest of the tests if it's not installed.  The Perl
+  bindings have not been tested on Windows.
 
   To build the PHP bindings for the C client library, you will need PHP
   5.x (only tested with 5.2 and 5.3) and phpize, plus any other programs
@@ -393,7 +392,7 @@ LICENSE
   statement and license:
 
     Copyright 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011,
-        2012 The Board of Trustees of the Leland Stanford Junior
+        2012, 2013 The Board of Trustees of the Leland Stanford Junior
         University
 
     Permission is hereby granted, free of charge, to any person obtaining
