@@ -3,7 +3,7 @@
 # Check that too-new features of Perl are not being used.
 #
 # Written by Russ Allbery <rra@stanford.edu>
-# Copyright 2012
+# Copyright 2012, 2013
 #     The Board of Trustees of the Leland Stanford Junior University
 #
 # See LICENSE for licensing terms.
@@ -13,8 +13,8 @@ use warnings;
 
 use Test::More;
 
-# Currently, Perl 5.6 or newer is required.
-my $MINIMUM_VERSION = '5.006';
+# Currently, Perl 5.8 or newer is required.
+my $MINIMUM_VERSION = '5.008';
 
 # Skip tests if Test::MinimumVersion is not installed.
 if (!eval { require Test::MinimumVersion }) {
